[package]
name = "pr-chain"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = ""
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/display-board-pi"
repository = "https://github.com/dylanowen/display-board-pi"
edition = "2021"

[profile.release]
lto = true

[dependencies]
log = "0.4"
env_logger = "0.9"

# Error handling
anyhow = "1.0"

# Command line parsing
clap = { version =  "3.1", features = ["derive", "env"] }

# Async Runtime
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }

git2 = "0.14"

## Console Styling
#console = "0.15"
#

#

#futures = "0.3"
#
## API Calls
#reqwest = { version = "0.11", features = ["json"] }
#serde = { version = "1.0", features = ["derive"] }
#
## Git Dependency Graph Logic
#petgraph = "0.6"
#
##regex = "1"
##git2 = "0.13"
##dialoguer = "0.6.2"

#dotenv = "0.15"